added placeholder in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <form>
             <label for = "breed">Please Type the Breed of Dog that You'd Like To See in an Image</label>
-            <input type = "text" id = "breedName">
+            <input type = "text" id = "breedName" placeholder = "boxer">
             <input type = "submit" value = "submit">
         </form>
         <div class = "results hidden">
